Bug 1047977 - Invert the notification bar close icon with type=info on OS X to provide contrast. r=Gijs
UltraBlame original commit: d10615f7421b529aa7ef920805550306748c9918

--- a/toolkit/themes/osx/global/notification.css
+++ b/toolkit/themes/osx/global/notification.css
@@ -450,6 +450,112 @@ border
 none
 ;
 }
+notification
+[
+type
+=
+"
+info
+"
+]
+:
+not
+(
+[
+value
+=
+"
+translation
+"
+]
+)
+.
+close
+-
+icon
+:
+not
+(
+:
+hover
+)
+{
+-
+moz
+-
+image
+-
+region
+:
+rect
+(
+0
+64px
+16px
+48px
+)
+!
+important
+;
+}
+media
+(
+min
+-
+resolution
+:
+2dppx
+)
+{
+notification
+[
+type
+=
+"
+info
+"
+]
+:
+not
+(
+[
+value
+=
+"
+translation
+"
+]
+)
+.
+close
+-
+icon
+:
+not
+(
+:
+hover
+)
+{
+-
+moz
+-
+image
+-
+region
+:
+rect
+(
+0
+128px
+32px
+96px
+)
+!
+important
+;
+}
+}
 .
 messageCloseButton
 :
